criado pasta estado insta4

--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -67,7 +67,7 @@ main > div {
     background-color: #f2d0e0;
 }
 footer{
-    background-color: mediumvioletred;
+    background-color: rgb(24, 31, 26);
     padding: 2vh;
 }
 
